Special height settings for soria and nihilo on safari and IE7 (and IE8) seem to no longer be necessary.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@15690 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/layout/resources/ExpandoPane.css
+++ b/layout/resources/ExpandoPane.css
@@ -82,10 +82,6 @@
 		border: 1px solid #B1BADF;
 	}
 	
-	.dj_safari .soria .dojoxExpandoTitle {
-		height:18px;
-	}
-	
 	.soria .dojoxExpandoIcon {
 		background: url('../../../dijit/themes/soria/images/spriteRoundedIconsSmall.png') no-repeat center center;
 		background-position:-60px 0px;
@@ -117,11 +113,6 @@
 		background: none;
 		background-color: #fafafa;
 		border: 1px solid #ccc;
-	}
-	
-	.dj_ie7 .nihilo .dojoxExpandoTitle,
-	.dj_safari .nihilo .dojoxExpandoTitle {
-		height:18px;
 	}
 
 	.tundra .dojoxExpandoRight .dojoxExpandoTitle,
